qa/apps/lectern/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lectern
  name: lectern
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lectern
  template:
    metadata:
      labels:
        app: lectern
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal:235879a5406d8d3cb4d5bd06b6306a1fe45e90e2-1657069326 # {"$imagepolicy": "cqdg-qa-fluxcd:portal"}
        name: lectern
        resources:
          requests:
            memory: "128Mi"
            cpu: '0.50'
          limits:
            memory: "256Mi"
            cpu: '1.00'
        volumeMounts:
        - name: db-credentials
          mountPath: "/opt/db-credentials"
          readOnly: true
        - name: cmd
          mountPath: "/opt/scripts"
          readOnly: true
        command: ["/opt/scripts/launch.sh"]
      volumes:
      - name: db-credentials
        secret:
          secretName: lectern-db-credentials
      - name: cmd
        configMap:
          name: lectern-cmd
          defaultMode: 0555
