qa/apps/lectern/troubleshoot-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: troubleshoot-mongodb
  name: troubleshoot-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: troubleshoot-mongodb
  template:
    metadata:
      labels:
        app: troubleshoot-mongodb
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: mongo:4.4.18
          name: troubleshoot-mongodb
          command: ["sleep", "infinity"]
