qa/apps/lectern/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lectern
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: lectern-basic-auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
        - schema.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: schema.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: lectern
            servicePort: 3000
